--- a/en_about.html
+++ b/en_about.html
@@ -243,7 +243,7 @@ permalink: /en/about
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="/img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="/img/projects/one.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
