--- a/en_about.html
+++ b/en_about.html
@@ -27,6 +27,7 @@ permalink: /en/about
         <p>AM Software is an up-and-coming Startup developing state-of-the-art software and providing world-class IT services such as tailored software development, e-commerce, website development, digital marketing, consulting and much more to businesses, brands and organizations of different sizes and industries around the world, at the most affordable rates possible.</p>
 
         <p>Our priority is to take our clients by the hand in every step of the process of bringing the best digital solutions for their business to fruition, warranting a fast return on their investment and exponential growth on their productivity, business and brand positioning. With many years of experience, AM Software always delivers exceptional results that exceed every client’s expectations.</p>
+        <br><br><br>
 
         <center><h1>BUILDING THE FUTURE</h1></center>
         <hr><br>
@@ -194,7 +195,7 @@ permalink: /en/about
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://carfreak.club">--><img src="/img/projects/project-6.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://carfreak.club">--><img src="/img/projects/cars.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>        
