--- a/en_index.html
+++ b/en_index.html
@@ -74,7 +74,7 @@ permalink: /en/
     <br><div class="container">
       <div class="row">
 
-       <center><h1>ABOUT</h1></center>
+       <center><h1>AM SOFTWARE</h1></center>
         <hr><br>
 
         <p>AM Software is an up-and-coming Startup developing state-of-the-art software and providing world-class IT services such as tailored software development, e-commerce, website development, digital marketing, consulting and much more to businesses, brands and organizations of different sizes and industries around the world, at the most affordable rates possible.</p>
