--- a/en_index.html
+++ b/en_index.html
@@ -962,7 +962,7 @@ permalink: /en/
               <i class="icon-eye"></i>
             </div>
               <div class="text">
-              <h3 class="heading">Social Media Management & Marketing</h3>
+              <h3 class="heading">Social Media</h3>
             </div><hr>
               <p>Creation of graphic line for printed and digital media. In the same way we redesign and restructure existing graphic lines according to the needs of our customers.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
