--- a/es_studio.html
+++ b/es_studio.html
@@ -80,7 +80,7 @@ permalink: /es/marketing
               <i class="icon-share"></i>
             </div>
               <div class="text">
-              <h3 class="heading">Gestión y Marketing de Redes Sociales</h3>
+              <h3 class="heading">Redes Sociales</h3>
             </div><hr>
               <p>Gestión de comunidades digitales y producción de contenido de calidad que genera interacción con sus prospectos y clientes actuales, en base a estrategias creativas y publicitarias efectivas, así como campañas profesionales de marketing pagadas diseñadas y ejecutadas para el éxito de su marca.
 </p>
