--- a/es_index.html
+++ b/es_index.html
@@ -77,7 +77,7 @@ permalink: /es/
        <center><h1>ACERCA</h1></center>
         <hr><br>
 
-        <p>AM Software es una startup desarrollando software de última generación y brindando servicios de IT de clase mundial, como desarrollo de software a medida, comercio electrónico, desarrollo de sitios web, marketing digital, consultoría y mucho más para empresas, marcas. y organizaciones de diferentes tamaños e industrias en todo el mundo, a las tarifas más asequibles.</p>
+        <p>AM Software es una startup dedicada a desarrollar software de última generación y brindar servicios de IT de clase mundial, como desarrollo de software a medida, comercio electrónico, desarrollo de sitios web, marketing digital, consultoría y mucho más para empresas, marcas, y organizaciones de diferentes tamaños e industrias en todo el mundo, a las tarifas más asequibles.</p>
 
         <p>Nuestra prioridad es llevar a nuestros clientes de la mano en cada paso del proceso de realizar las mejores soluciones digitales para su negocio, garantizando un rápido retorno de su inversión y un crecimiento exponencial de su productividad, ventas y posicionamiento. Con más de 10 años de experiencia, AM Software brinda resultados excepcionales que superan las expectativas de nuestros clientes.</p>
         <br><br><br>
