--- a/es_ecommerce.html
+++ b/es_ecommerce.html
@@ -181,7 +181,7 @@ permalink: /es/ecommerce
       <div class="row" id="pricing">
 
              <br>
-<h2>E-COMMERCE HOSTING</h2>
+<h2>E-COMMERCE DEVELOPMENT</h2>
 <br>
         <div class="snip1404">
   <div class="plan startup">
@@ -189,7 +189,7 @@ permalink: /es/ecommerce
       <h4 class="plan-title">
         STARTUP
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$249.99</span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$399.99</span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>For Companies Worldwide</li>
@@ -224,7 +224,7 @@ permalink: /es/ecommerce
       <h4 class="plan-title">
         PRO
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$399.99</span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$599.99</span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>For Companies Worldwide</li>
@@ -259,7 +259,7 @@ permalink: /es/ecommerce
       <h4 class="plan-title">
         PREMIUM
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$599.99</span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$899.99</span></div>
     </header>
     <ul class="plan-features">
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>For Companies Worldwide</li>
@@ -292,7 +292,7 @@ permalink: /es/ecommerce
       <h4 class="plan-title">
         GOLD
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$899.99</span><span class="plan-type"></span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$1999.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       
