--- a/en_ecommerce.html
+++ b/en_ecommerce.html
@@ -183,7 +183,7 @@ permalink: /en/ecommerce
       <div class="row" id="pricing">
 
              <br>
-<h2>E-COMMERCE HOSTING</h2>
+<h2>E-COMMERCE DEVELOPMENT</h2>
 <br>
         <div class="snip1404">
   <div class="plan startup">
@@ -191,7 +191,7 @@ permalink: /en/ecommerce
       <h4 class="plan-title">
         STARTUP
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$249.99</span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$399.99</span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>For Companies Worldwide</li>
@@ -226,7 +226,7 @@ permalink: /en/ecommerce
       <h4 class="plan-title">
         PRO
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$399.99</span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$599.99</span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>For Companies Worldwide</li>
@@ -261,7 +261,7 @@ permalink: /en/ecommerce
       <h4 class="plan-title">
         PREMIUM
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$599.99</span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$899.99</span></div>
     </header>
     <ul class="plan-features">
     <li><i class="icon-checkmark" style="color:#ffffff;"> </i>For Companies Worldwide</li>
@@ -294,7 +294,7 @@ permalink: /en/ecommerce
       <h4 class="plan-title">
         GOLD
       </h4>
-      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$899.99</span><span class="plan-type"></span></div>
+      <div class="plan-cost"><span class="plan-type">From </span><span class="plan-price">$1999.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       
