--- a/index.html
+++ b/index.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2HJYH0SJ79"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2HJYH0SJ79');
-</script>
-
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>AM Software</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Favicons -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2HJYH8SJ79"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-2HJYH8SJ79');
+  </script>
+
+  <title>AM Software</title>
+  <meta name="description" content="AM Software builds custom software, web apps, and AI-powered business tools. Expert Django & Python development, consulting, and digital solutions.">
+  <meta name="keywords" content="software development, custom software solutions, Django developer, Python developer, web app development, AI business tools">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://amsoftware.co/">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="AM Software">
+  <meta property="og:description" content="Digital solutions and software consulting.">
+  <meta property="og:image" content="https://amsoftware.co/preview.png">
+  <meta property="og:url" content="https://amsoftware.co/">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AM Software">
+  <meta name="twitter:description" content="Custom web apps, Django development, and AI-powered business tools.">
+  <meta name="twitter:image" content="https://amsoftware.co/preview.png">
+
+  <!-- (Optional) Theme color for mobile UI -->
+  <meta name="theme-color" content="#0ea5e9">
+
+  <!-- Icons -->
   <link rel="icon" href="/favicon.ico" sizes="any">
-  <link href="assets/img/am/favicon.png" rel="icon">
-  <link href="assets/img/am/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/am/favicon.png" rel="icon">
+  <link rel="apple-touch-icon" href="assets/img/am/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;..." rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+  <!-- Vendor CSS -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
+  <!-- Main CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
-
 </head>
+
 
 <body class="index-page">
 
